PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Fix for not writing null test result file titles
- pts-core: Fix & improvements to PRESET_OPTIONS environment variable
- pts-core: Rename old/legacy phoromatic module to phoromaric_legacy
- phodevi: Improvement for detecting optimal NVIDIA Linux GPU core frequency on modern GPUs

Phoronix Test Suite 5.0.1-Plavsk
2 April 2014

- pts-core: Add "libudev1:i386" to "32bit-compatibility" external dependency for Ubuntu Linux
- pts-core: Add invalid command helper to force-install sub-command
- pts-core: Add "pcre" external dependency
- pts-core: Add pushover_net module as a way of sending iOS/Android push notifications of results using Pushover.net
- pts-core: Ensure the result file description properly updates when adding to result files with new data
- pts-core: Add edit-result-file command that allows for editing a result file's title and description
- pts-core: Workaround HTTPS OpenBenchmarking.org proxy issue
- pts-core: Improved handling when the system's php.ini is using a restricted open_basedir setting
- pts-core: Arch Linux support improvements
- pts-core: When PTS client fails to find ZIP support, emit a PTS error
- pts-core: Ship an AppData file (phoronix-test-suite.appdata.xml)
- toggle_screensaver: Disable on OS X since there is no support for automatically disabling the OS X screensaver and causes collision with MacPorts
- phodevi: Add extra checks to ensure NVIDIA blob doesn't get reported as Nouveau DDX due to kernel changes

Phoronix Test Suite 5.0-Plavsk
12 March 2014

- pts-core: Improvements to run-random-tests
- pts-core: Support for running the HTML5 UI on Microsoft Windows
- pts-core: Rename RemoteAccessAllowed user configuration option to RemoteAccessPort
- phodevi: Improve MATE detection
- phodevi: Improve desktop environment recognition with $DESKTOP_SESSION
- phodevi: Ensure GCC's minor version number is reported

Phoronix Test Suite 5.0 Milestone 3
3 March 2014
